finishing the college years section and making style changes

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mock Tribute Page</title>
     
-    <link rel="stylesheet" href="./coverStyle.css">
+    <link rel="stylesheet" href="./styles/coverStyle.css">
   </head>
   <body>   
     <a href="./main.html" id="background-img">Click</a>
     <header>
       <h1 id="title">
-        <span class="webScreen">Wardell "Stephen" Curry<span class="sr-only">The Second</span> &#8545;</span>
-        <span class="mobileScreen">Stephen<br/> Curry</span>
+        <span class="web-screen">Wardell "Stephen" Curry<span class="sr-only">The Second</span> &#8545;</span>
+        <span class="mobile-screen">Stephen<br/> Curry</span>
       </h1>
       <p class="headerIntro">
-        <span class="webScreen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.</span>.
-        <span class="mobileScreen"><abbr title="National Basketball Association">NBA</abbr> Star and Legend</span>
+        <span class="web-screen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.</span>.
+        <span class="mobile-screen"><abbr title="National Basketball Association">NBA</abbr> Star and Legend</span>
       </p>
     </header>
   </body>
