--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
 
     <title>Mock Tribute</title>
     
-    <link rel="stylesheet" media="all" href="styles.css">
-    <link rel="stylesheet" media="screen and (max-width: 786px)" href="./tabletStyles.css">
-    <link rel="stylesheet" media="screen and (max-width: 440px" href="./mobileStyle.css">
+    <link rel="stylesheet" media="all" href="./styles/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 786px)" href="./styles/tabletStyles.css">
+    <link rel="stylesheet" media="screen and (max-width: 440px" href="./styles/mobileStyle.css">
   </head>
   <body>
     <header class="header">
@@ -103,18 +103,24 @@
           <div class="right-float image-style">
             <img class="medium-img" src="./images/davidsonCoach.jpeg">
           </div>
-          But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat. In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with three upsets against higher ranking opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas in the Elite Eight round.
+          But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat. In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with three upsets against higher ranking opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. Curry would stay at Davidson College for another year completing his junior year. He would have another stellar season and gained the confidence he needed to add his name to the 2008 NBA Draft.
         </p>
       </section>
-      <section class="section-clear section-header">
+      <div class="section-clear section-header">
         <header id="dynasty">
-          <h2 class="section-title">Warroir's Dynasty</h2>
-          <p class="section-intro-mini">4 NBA Champions Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
+          <h2 class="section-title">Warrior's Dynasty</h2>
+          <p class="section-intro-mini">4 NBA Championship Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
         </header>
         <div class="section-line"></div>
-        <iframe width="760" height="415" src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div>>  
+          <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
+            <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
+        </div>
         <p class="article-info">          
-          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors . 
+          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors saw something in Curry and wanted him to be a part of their camp.
+          <div>
+            <iframe width="760" height="415" src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen controls>Video not supported</iframe>
+          </div> 
         </p>
       </section>
       <section class="section-clear section-header">
