mobile Styling changes

--- a/main.html
+++ b/main.html
@@ -18,38 +18,49 @@
     </header>
     <nav class="nav-bar">
       <ul>
-        <li>
+        <li class="large-Screen">
           <button>
             <a href="#back-to-top">
-            <span class="desktop">Back To Top</span>
-            <span class="mobile-Screen">Top</span>
+              Back To Top
             </a>
           </button>
         </li>
         <li>
           <button>
             <a href="#young-curry">
-              <span class="desktop">Young Curry</span>
-              <span class="mobile-Screen">Kid</span>
+              <span class="large-Screen">Young Curry</span>
+              <span class="mobile-screen">Kid</span>
             </a>
           </button>
         </li>
         <li>
           <button>
             <a href="#wildcats">
-              <span class="desktop">Wildcats</span>
-              <span class="mobile-Screen">College</span>
+              <span class="large-Screen">Wildcats</span>
+              <span class="mobile-screen">College</span>
             </a>
           </button>
         </li>
         <li>
-          <button><a href="#dynasty">Dynasty</a></button>
+          <button>
+            <a href="#dynasty">
+              Dynasty
+            </a>
+          </button>
         </li>
         <li>
-          <button><a href="#legacy">Legacy</a></button>
+          <button>
+            <a href="#legacy">
+              Legacy
+            </a>
+          </button>
         </li>
-        <li>
-          <button><a href"#resources">Resources</a></button>
+        <li class="large-Screen">
+          <button>
+            <a href"#resources">
+              Resources
+            </a>
+          </button>
         </li>
       </ul>
     </nav>    
@@ -63,7 +74,7 @@
       <section>
         <header id="young-curry" class="section-header">
           <h2 class="section-title">Young Curry</h2>
-          <p class="section-intro-mini">The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son</p>
+          <p class="section-intro-mini"><span class="large-Screen">The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son</span></p>
         </header>
         <div class="section-line"></div>
         <p id="tribute-info" class="article-info">
@@ -73,37 +84,34 @@
               A very young Stephen Curry sitting with a plush basketball
             </figcaption>                   
           </div>
-          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in Akron, Ohio, the eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and Sonya Curry, in 1983. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. With a <abbr title="three point">3PT</abbr> shooting star for a father, the Curry kids had access to behind the scene activities some can only dream of. It has been said that Steph even attended practices with his father. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. Throughout his childhood, it was common to see Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son. You can a link to the article in the Resources section. </span><span class="large-Screen"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
+          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in Akron, Ohio, the eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and Sonya Curry, in 1983. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. With a <abbr title="three point">3PT</abbr> shooting star for a father, the Curry kids had access to behind the scene activities some can only dream of. It has been said that Steph even attended practices with his father. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. Throughout his childhood, it was common to see Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son. You can a link to the article in the Resources section. </span><span class="large-Screen1"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
             <blockquote cite="https://www.usab.com/news-events/news/2015/05/before-they-made-it-stephen-curry.aspx">
               "He was energetic, always paid attention to what was going on, eager to learn. He tried several different sports, not just basketball. He played football, baseball, a little soccer. He was always very intuitive of what was going on around him. He just soaked it all up." 
               <cite>- Dell Curry</cite>
             </blockquote>
             </span>
-          <div class="float-left">
+          <div class="float-left large-Screen">
             <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
             <figcaption class="medium-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
             </figcaption>
           </div>
-          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that gGetting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide.
+          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that getting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide. Yet suprisingly Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being rated so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. In the end he chose to go to a local college.
         </p>
       </section>
       <section class="section-clear section-header">
         <header id="wildcats">
           <h2 class="section-title">Wildcat Years</h2>
-          <p class="section-intro-mini">Putting the nation on notice</p>
+          <p class="section-intro-mini"><span class="large-Screen">Putting the nation on notice</span></p>
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-          <div class="left-float image-style">
-            <img class="small-image" src="./images/davidsonCollege.jpg" alt="Stephen Curry playing basketball in a Davidson jersey">
-            <figcaption class="medium-caption">Stephen Curry playing for Davidson College</figcaption>
-          </div>
-          Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
-          <div class="right-float image-style">
-            <img class="medium-img" src="./images/davidsonCoach.jpeg">
-          </div>
-          But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat. In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with three upsets against higher ranking opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. Curry would stay at Davidson College for another year completing his junior year. He would have another stellar season and gained the confidence he needed to add his name to the 2008 NBA Draft.
+           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat.
+            <div class="left-float image-style">
+              <img class="medium-img" src="./images/davidsonCoach.jpeg">
+              <figcaption class="medium-caption">Stephen Curry with then Davidson College Coach</figcaption>
+            </div>
+           In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with consecutive  upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season. 
         </p>
       </section>
       <div class="section-clear section-header">
@@ -112,12 +120,12 @@
           <p class="section-intro-mini">4 NBA Championship Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
         </header>
         <div class="section-line"></div>
-        <div>>  
-          <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
-            <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
-        </div>
         <p class="article-info">          
-          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors saw something in Curry and wanted him to be a part of their camp.
+          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his family and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors saw something in Curry and wanted him to be a part of their camp.
+          <div>
+            <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
+              <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
+          </div>
           <div>
             <iframe width="760" height="415" src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen controls>Video not supported</iframe>
           </div> 
