Styling tablet style  and mobile style

--- a/main.html
+++ b/main.html
@@ -126,8 +126,10 @@
             <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
               <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
           </div>
-          <div>
-            <iframe width="760" height="415" src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen controls>Video not supported</iframe>
+          <div class="video-frame">
+            <iframe src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video-content" allowfullscreen controls>
+              Video not supported
+            </iframe>
           </div> 
         </p>
       </section>
