--- a/main.html
+++ b/main.html
@@ -79,8 +79,8 @@
         <div class="section-line"></div>
         <p id="tribute-info" class="article-info">
           <div class="float-right" id="img-div">
-            <img id="image" class="medium-size-image" src="./images/plushBasketball..jpeg" alt="Young Stephen Curry sitting with a plush basketball.">
-            <figcaption class="medium-caption" id="img-caption">
+            <img id="image" class="tall-image" src="./images/plushBasketball..jpeg" alt="Young Stephen Curry sitting with a plush basketball.">
+            <figcaption class="img-caption" id="img-caption">
               A very young Stephen Curry sitting with a plush basketball
             </figcaption>                   
           </div>
@@ -92,7 +92,7 @@
             </span>
           <div class="float-left large-Screen">
             <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
-            <figcaption class="medium-caption">
+            <figcaption class="img-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
             </figcaption>
           </div>
@@ -109,7 +109,7 @@
            Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat.
             <div class="left-float image-style">
               <img class="medium-img" src="./images/davidsonCoach.jpeg">
-              <figcaption class="medium-caption">Stephen Curry with then Davidson College Coach</figcaption>
+              <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
             </div>
            In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with consecutive  upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season. 
         </p>
@@ -126,6 +126,7 @@
             <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
               <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
           </div>
+          Curry had a spectacular rookie season in the NBA. It almost seamless fit into the Warriors' lineup. He would start in 71 total games and play in 77. His averages were . The rookie sensation would only just miss winning the Rookie of the Year award finsishing in second place. It seemed as though Curry was the fresh new blood that the Warriors needed to break the curse on the Bay area. But then 
           <div class="video-frame">
             <iframe src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video-content" allowfullscreen controls>
               Video not supported
