adding content to wildcats section adjusting styles

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     </header>
     <nav class="nav-bar">
       <ul>
-        <li class="large-Screen">
+        <li class="large-Screen1">
           <button>
             <a href="#back-to-top">
               Back To Top
@@ -28,16 +28,14 @@
         <li>
           <button>
             <a href="#young-curry">
-              <span class="large-Screen">Young Curry</span>
-              <span class="mobile-screen">Kid</span>
+              Young Curry              
             </a>
           </button>
         </li>
         <li>
           <button>
             <a href="#wildcats">
-              <span class="large-Screen">Wildcats</span>
-              <span class="mobile-screen">College</span>
+              Wildcats
             </a>
           </button>
         </li>
@@ -55,7 +53,7 @@
             </a>
           </button>
         </li>
-        <li class="large-Screen">
+        <li class="large-Screen1">
           <button>
             <a href"#resources">
               Resources
@@ -106,7 +104,7 @@
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat.
+           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat.
             <div class="left-float image-style">
               <img class="medium-img" src="./images/davidsonCoach.jpeg">
               <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
