--- a/main.html
+++ b/main.html
@@ -88,13 +88,14 @@
               <cite>- Dell Curry</cite>
             </blockquote>
             </span>
+          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that getting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball.
           <div class="float-left large-Screen">
-            <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
+            <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stephen Curry as a child watching his dad's 3PT shooting contest.">
             <figcaption class="img-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
             </figcaption>
           </div>
-          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that getting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide. Yet suprisingly Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being rated so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. In the end he chose to go to a local college.
+          Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide. Yet suprisingly Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being rated so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. In the end he chose to go to a local college.
         </p>
       </section>
       <section class="section-clear section-header">
@@ -104,12 +105,12 @@
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat.
+           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. Safe to say Curry was set on making every school that looked past him regret it.
             <div class="left-float image-style">
               <img class="medium-img" src="./images/davidsonCoach.jpeg">
               <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
             </div>
-           In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with consecutive  upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season. 
+           In the 2007-2008 season Curry once again helped his team make it to the NCAA College Basketball tournament. Davidson went into the first round ranked 10th. This tourney run would turn out to be a cinderalla story for the ages. Curry and the Wildcat team pulled off three major upsets that stunned the nation. blazed through the first three rounds with consecutive upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season. 
         </p>
       </section>
       <div class="section-clear section-header">
@@ -126,9 +127,7 @@
           </div>
           Curry had a spectacular rookie season in the NBA. It almost seamless fit into the Warriors' lineup. He would start in 71 total games and play in 77. His averages were . The rookie sensation would only just miss winning the Rookie of the Year award finsishing in second place. It seemed as though Curry was the fresh new blood that the Warriors needed to break the curse on the Bay area. But then 
           <div class="video-frame">
-            <iframe src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video-content" allowfullscreen controls>
-              Video not supported
-            </iframe>
+            
           </div> 
         </p>
       </section>
@@ -150,8 +149,8 @@
       </div>
     </main>
     <footer class="section-clear">
-      <h2 id="resources">Resources</h2>
-      <p>Links to all pictures, quotes, and additional information can be found in the table below.</p>
+      <h2 id="resources" class="section-title">Resources</h2>
+      <p class="section-into-mini">Links to all pictures, quotes, and additional information can be found in the table below.</p>
       <table>
 
       </table>
